--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiodns==3.5.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.13.1
+aiohttp
 aiosignal==1.4.0
 attrs==25.4.0
 build==1.3.0
@@ -8,21 +8,21 @@ ccxt==4.5.11
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
-contourpy==1.3.3
+contourpy
 cryptography==46.0.3
-cycler==0.12.1
-Cython==3.1.4
-fonttools==4.60.1
+cycler
+Cython
+fonttools
 frozenlist==1.8.0
 idna==3.11
-kiwisolver==1.4.9
+kiwisolver
 markdown-it-py==4.0.0
-matplotlib==3.10.7
+matplotlib
 mdurl==0.1.2
 multidict==6.7.0
-numpy==2.3.4
+numpy
 packaging==25.0
-pandas==2.3.3
+pandas
 pillow==12.0.0
 propcache==0.4.1
 pycares==4.11.0
